fix: close-btn right bottom shift in small screens

--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -7,6 +7,6 @@
 @media screen and (max-width: 751px) {
   .popup__close {
     top: -42px;
-    right: -6px;
+    right: 0;
   }
 }
